# lightcryptotools

./: Cargo.toml  README.md  run_tests.sh
.github/workflows/: rust.yml
benches/: bigint.rs
benches/bigint/: divrem.rs  main.rs
benches/crypto/: ecdsa.rs  elliptic_curve.rs  main.rs  secp256k1.rs  sha2.rs  sha3.rs
crates/devtools/: Cargo.toml
crates/devtools/src/: hex.rs  lib.rs  path.rs
examples/: randombytes.rs
examples/ethereum/: eoa_gen_vanity_address.rs  eoa_key_to_address.rs  rlp_decoder.rs  tx_decoder.rs
src/: lib.rs
src/bigint/: add.rs  bigint_core.rs  bigint_display.rs  bigint_from.rs  bigint_into.rs  bigint_new.rs  bigint_slice.rs  bigint_vec.rs  biguint.rs  bits.rs  bytes.rs  cmp.rs  digit.rs  divrem.rs  gcd.rs  helper_methods.rs  len.rs  math.rs  mod.rs  modular.rs  mul.rs  neg.rs  shift.rs  sub.rs  zero.rs
src/blockchain/: mod.rs
src/blockchain/ethereum/: mod.rs
src/crypto/: codecs.rs  ecdsa_core.rs  ecdsa_key.rs  ecdsa_public_key.rs  ecdsa_signing.rs  ecdsa_verifying.rs  elliptic_curve_domain.rs  elliptic_curve_domain_key_encoding.rs  elliptic_curve_domain_validating.rs  elliptic_curve_params.rs  mod.rs  p1363.rs  rfc6979.rs  sec1.rs  secp256k1.rs
src/crypto/ecdsa/: ecdsa_core.rs  ecdsa_encoding.rs  ecdsa_key.rs  ecdsa_public_key_recovery.rs  ecdsa_signing.rs  ecdsa_verifying.rs  mod.rs
src/crypto/hash/: core.rs  mod.rs  (+2 more)
src/math/: elliptic_curve.rs  mod.rs  modular.rs
src/os/: apple.rs  errno.rs  linux.rs  mod.rs  windows.rs
src/random/: apple.rs  error.rs  linux.rs  mod.rs  os_random.rs  windows.rs
src/testing_tools/: bigint.rs  cpu_endian.rs  ethereum.rs  mod.rs  quickcheck.rs
src/tools/: bytes.rs  mod.rs  slice.rs
tests/blockchain/: main.rs
tests/crypto/: curves.rs  ecdsa_p256_signing_verifying.rs  ecdsa_verifying_wycheproof.rs  hmac_wycheproof.rs  main.rs  secp256k1_key.rs  secp256k1_public_key.rs  secp256k1_public_key_recovery.rs  secp256k1_sec1.rs  secp256k1_signing_verifying.rs  sha3_short_msg_kat.rs
tests/random/: main.rs  os_random.rs
(+79 files in other folders)
