[package]
name = "lightcryptotools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.20"

[dev-dependencies]
devtools = { path = "./crates/devtools" }
mockall = "0.11.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
ring = "0.16.20"
serde_json = "1.0.79"

[[bin]]
path = "bin/randombytes.rs"
name = "randombytes"

