[package]
name = "lightcryptotools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
devtools = { path = "./crates/devtools" }
mockall = "0.11.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.79"
rust_crypto_sha2 = { package = "sha2", version = "0.10.2" }
num-bigint = "0.4.3"

[[example]]
path = "examples/randombytes.rs"
name = "randombytes"

[[example]]
path = "examples/ethereum/eoa_key_to_address.rs"
name = "eoa_key_to_address"

[[example]]
path = "examples/ethereum/eoa_gen_vanity_address.rs"
name = "eoa_gen_vanity_address"

[[example]]
path = "examples/ethereum/rlp_decoder.rs"
name = "rlp_decoder"

[[example]]
path = "examples/ethereum/tx_decoder.rs"
name = "tx_decoder"
